--- a/Beaches.css
+++ b/Beaches.css
@@ -1,6 +1,47 @@
 html{
-  background-color:white;
+  background-color:#bdbdbd;
 }
 body{
   font-family: 'Cabin Sketch';
+}
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+  font-size:63px;
+}
+
+.titleimg{
+  width:650px;
+  height:250px;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+}
+.beacheslink{
+  color: #338930;
+  font-size:30px;
+}
+.ntlprkslink{
+  color: #ffa700;
+  font-size:30px;
+}
+.citieslink{
+  color: darkmagenta;
+  font-size:30px;
+}
+.indexlink{
+  font-size:30px;
+}
+.clrwtr{
+  width:265px;
+  height:400px;
+}
+.attribute{
+  clear:left;
+  font-size:10px
 }
